change pic in pricing and fix spacing in headshots

--- a/src/components/Headshots/Headshots.module.css
+++ b/src/components/Headshots/Headshots.module.css
@@ -44,7 +44,7 @@
   flex-direction: row;
   margin-bottom: 100px;
   justify-content: center;
-  gap: 0.3%;
+  gap: 1.3%;
   margin-top: 0px;
 }
 
@@ -71,7 +71,7 @@
 
 .masonry-image {
   width: 100%;
-  margin: 0.1% 0;
+  margin: 2.5% 0;
   height: auto;
   cursor: pointer;
 }
@@ -108,7 +108,6 @@
     }
   }
 }
-
 
 .overlay {
   width: 100%;
