--- a/src/components/headshotsAbout/HeadshotsAbout.module.css
+++ b/src/components/headshotsAbout/HeadshotsAbout.module.css
@@ -57,7 +57,7 @@
 
 .info-image-container img {
   width: 100%;
-  border: 2px solid black;
+  border-bottom: 2px solid black;
 }
 
 .info {
