--- a/src/components/pricing/Pricing.module.css
+++ b/src/components/pricing/Pricing.module.css
@@ -63,17 +63,11 @@
   img {
     width: 70%;
     border-radius: 0.1em;
+    border: 2px solid black;
   }
 }
 
-.pricing-1-image-container {
-  justify-content: baseline;
-  padding: 0;
-  img {
-    width: 60%;
-  }
-}
-
+.pricing-1-image-container,
 .pricing-3-image-container {
   justify-content: baseline;
   padding: 0;
@@ -106,7 +100,6 @@
   justify-content: center;
   align-items: center;
   background-color: rgba(0, 0, 0, 0.3);
-  border: 1px solid rgb(73, 57, 59);
   width: 45%;
   margin: 2% 0;
   height: 35vw;
